rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-4f968d1ee9010691.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libleading_comma_rs-4f968d1ee9010691.rmeta: leading-comma.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-4f968d1ee9010691.d: leading-comma.rs Cargo.toml

leading-comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
